2009-10-21  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (autoloadModules): Pass -b to modprobe to obey blacklist
	files,
	* bin/mudur.py (mtime): Use os.path.getmtime() instead of os.stat(),
	* bin/mudur.py (setHostname):
	- Use ternary if-else construction for better readability,
	* bin/mudur.py (startServices, stopServices): Don't leak D-Bus connection
	handles, close them.
	* bin/mudur.py: Fix some inverted logic if-else blocks,
	* bin/mudur.py (Config): Rename get_mount() to
	get_fstab_entry_with_mountpoint(),
	* bin/mudur.py (updateMtab): New function to update mtab entry for a given
	partition and clear existing mtab~ lock files (#10562),
	* bin/mudur.py (stopSystem): Use shutil.copy instead of forking 'cp',
	* bin/mudur.py (mountRootFileSystem): Call mount -af instead of calling
	mount -f for each partition in /etc/fstab,
	* bin/mudur.py (cleanupTmp): Call rm -rf once without extending each
	pattern through glob,
	* bin/mudur.py (mountRootFileSystem): Suggest F3/FS Check when rootfs
	can't be mounted as R/W (#10408),
	* bin/mudur.py: Bring back get_kernel_option() and touch() from
	pardus-python to reduce external dependencies,
	Move imports to the related functions as mudur is called and called again
	through the boot process.

2009-10-19  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (checkRootFileSystem): Don't fail if /etc/fstab doesn't
	somehow have an entry for the root filesystem.
2009-07-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (main): --retry-failed is removed, use --type=failed instead.
2009-07-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (writeToFile): Give an empty string to the writeToFile
	function by default,
	* bin/mudur.py (checkRootFileSystem):
	- Refactor the function so that mudur calls sulogin when the root
	filesystem couldn't be mounted as read/write,
	- Call fsck with -y for trying to fix the filesystem in all cases when the
	fsck is forced,